# MealPlaner

./: .gitignore  CMakeLists.txt  main.cpp  testDB.cpp  testLogger.cpp  testQuery.cpp  testSaveStuff.cpp  testUniqueId.cpp
Datastructures/: CIngredient.cpp  CIngredient.hpp  CIngredientManager.cpp  CIngredientManager.hpp  CMeal.hpp  CMealPlan.hpp  IData.hpp
DbHelper/: CDatabaseManager.cpp  CDatabaseManager.hpp  CDatabaseQueryWrapper.cpp  CDatabaseQueryWrapper.hpp  CIngredientsTable.hpp  CMealPlansTable.hpp  CMealsTable.hpp  ITable.hpp
DbHelper/Query/: CColumnValueString.cpp  CColumnValueString.hpp  CCondition.cpp  CCondition.hpp  CInsertQuery.cpp  CInsertQuery.hpp  CSelectQuery.cpp  CSelectQuery.hpp  IColumnValue.hpp  IQuery.cpp  IQuery.hpp  QueryConstants.hpp  _ExampleQueries.txt
Utils/: Logger.hpp
